--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <span class="navbar-toggler-icon" data-bs-target="#sidebar"></span>
         </button>
         <a class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold px-3" href="#">
-          <img src="./assets/image/icon/VitalityX.png" class="mt-3" alt="" style="width: 120px; height: 40px;">
-          <p style="font-size: 14px;">Decomentation of version 1.0.0v</p>
+          <img src="./assets/image/icon/VitalityX.png" class="mt-3 img-fluid" alt="" style="width: 120px; height: 40px;">
+          <p >Decomentation of version 1.0.0v</p>
         </a>
         <div class="flutter-icon">
           <img src="./assets/image/icon/flutter.png" alt="" style="width: 40px; height: 40px;">
