--- a/index.html
+++ b/index.html
@@ -421,6 +421,98 @@
 
           </ul>
         </div>
+        <div>
+
+          <h2>Admin UI</h2>
+
+          <ul class="ui-list-style">
+            
+            <li>
+              <p>Home</p>
+              <span>This is the <span>Home</span> screen with its multiple sections.</span>
+              <div class="nft-ui">
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/1.png" alt="">
+                </div>
+               
+
+              </div>
+            </li>
+            <li>
+              <p>Admin Profile</p>
+              <span>
+                This is the <span>My Profile</span> screen, where you can add a number of information and buttons, such as collections, activities, history, and details.</span>
+              <div class="nft-ui mb-4">
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/2.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/3.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/4.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/5.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/6.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/7.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/8.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/9.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/10.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/11.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/12.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/13.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/14.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/Admin/Admin/15.png" alt="">
+                </div>
+              </div>
+              <div class="nft-ui mb-4">
+                <div>
+                  <img src="./assets/image/NFT/profile/5.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/profile/6.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/profile/7.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/profile/8.png" alt="">
+                </div>
+
+              </div>
+              <div class="nft-ui mb-4">
+                <div>
+                  <img src="./assets/image/NFT/profile/9.png" alt="">
+                </div>
+                <div>
+                  <img src="./assets/image/NFT/profile/10.png" alt="">
+                </div>
+              </div>
+            </li>
+
+          </ul>
+        </div>
       </div>
     </section>
     <section id="contact-us">
