--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a href="#introduction" class="menu-item" data-bs-dismiss="offcanvas">Introduction</a>
           </li>
           <li>
-            <a href="#features" class="menu-item" data-bs-dismiss="offcanvas">Features</a>
+            <a href="#feature" class="menu-item" data-bs-dismiss="offcanvas">Features</a>
           </li>
           <li>
             <a href="#basic-info" class="menu-item" data-bs-dismiss="offcanvas">Basic Info</a>
@@ -93,7 +93,7 @@
       </div>
     </section>
     <!-- End of Introduction Section -->
-    <section id="features ">
+    <section id="feature">
      <div class="feature-section " >
       <h1>Features</h1>
       <div class="hr-tag"></div>
