--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
           <div class="hr-tag"></div>
           <p>
             APP_NAME is a mobile app UI kit for gyms, fitness communities, and fitness platforms or services. This UI kit is perfect for gym owners and fitness business owners. APP_NAME has a wide range of pre-fixed features and options that can be easily modified with access to a large number of variations. It's a visually stunning and feature-filled UI kit that comes ready with tons of functionalities, removing the need for developing a fitness platform or app separately or from scratch. As a result, APP_NAME is a great tool for fitness entrepreneurs and business owners who want to manage an interconnected app platform for trainers, nutritionists, and regular users.
-          </p>
-         
+          </p> 
         </div>
       </div>
     </section>
@@ -497,7 +496,7 @@
             </li>
             <li>
               <p>Menu</p>
-              <span>This is the <span>Menu</span> screen with its multiple sections.</span>
+              <span>This is the <span>Menu</span> screen with the screen/screens that can be accessed from it.</span>
               <div class="container nft-ui">
                 <div class="row">
                   <div class="col-md-4 col-lg-3 col-sm-6">
@@ -517,7 +516,7 @@
             </li>
             <li>
               <p>Schedule</p>
-              <span>This is the <span>Schedule</span> screen.</span>
+              <span>This is the <span>Schedule</span> screen with the screen/screens that can be accessed from it.</span>
               <div class="container nft-ui">
                 <div class="row">
                   <div class="col-12 col-md-4 col-lg-3 col-sm-6">
@@ -535,8 +534,7 @@
 
             <li>
               <p>Community</p>
-              <span>
-                This is the <span>Community</span> screen.</span>
+              <span>This is the <span>Community</span>screen with the screen/screens that can be accessed from it.</span>
               <div class="container nft-ui">
                 <div class="row">
                   <div class="col-12 col-md-4 col-lg-3 col-sm-6">
@@ -557,7 +555,10 @@
             <li>
               <p>Profile</p>
               <span>
-                This is the <span>Profile</span> screen.</span>
+                This is the <span>Profile</span> screen with the screen/screens that can be accessed from it.
+                </span>
+              <span>
+    
               <div class="container nft-ui">
                 <div class="row g-4 justify-content-center">
                   <div class="col-12 col-md-4 col-lg-3 col-sm-6">
