--- a/index.html
+++ b/index.html
@@ -193,7 +193,26 @@
         </li>
         <li>
           All three panels support <b>six (06) languages</b> 
-     
+         <ul>
+          <li>
+           English
+          </li>
+          <li>
+           Spanish
+          </li>
+          <li>
+           German
+          </li>
+          <li>
+           Arabic
+          </li>
+          <li>
+            French
+          </li>
+          <li>
+            Hindi
+          </li>
+         </ul>
         </li>
       </ul>
 
@@ -235,7 +254,7 @@
             </li>
             <li>
               <p>Change App Icon :</p>
-              <p>Go to the <span>"launcher"</span> folder under the <span>"assets"</span> folder, which can be found in the <span>"nfto"</span> folder. Then replace the png files with your own icon, background, and foreground.
+              <p>Go to the <span>"launcher"</span> folder under the <span>"assets"</span> folder, which can be found in the <span>"APP_NAME"</span> folder. Then replace the png files with your own icon, background, and foreground.
                 Go to this folder</p>
               <img src="./assets/image/change_app_icon.png" alt="" class="img-fluid">
               <p>And Run below code to change the icon.</p>
@@ -248,7 +267,7 @@
             </li>
             <li>
               <p> Change App Name :</p>
-              <p>Go to the <strong> /nfto/pubspec.yaml </strong> file then change the app name.</p>
+              <p>Go to the <strong> /APP_NAME/pubspec.yaml </strong> file then change the app name.</p>
               <img src="./assets/image/app-name.png" alt="" class="img-fluid">
               <p>And Run below code to change the app name.</p>
               <div class="code-snippet">
@@ -273,7 +292,7 @@
         <div>
           <h1>Directory & files</h1>
           <div class="hr-tag"></div>
-          <p>This is a screenshot of the entire directory of NFTO that contains all the necessary folders and files.</p>
+          <p>This is a screenshot of the entire directory of APP_NAME that contains all the necessary folders and files.</p>
           <img src="./assets/image/full-folder.png" alt="" style="margin-left: 20px;" class="img-fluid">
           <p>You can find the <span> src </span>folder and <span>main.dart</span> file under the <span>lib</span> folder.</p>
           <img src="./assets/image/lib-folder.png" alt="" style="margin-left: 20px;" class="img-fluid">
@@ -446,7 +465,7 @@
              
 
               <div class="container nft-ui">
-                <div class="row">
+                <div class="row g-4">
                   <div class="col-md-4 col-lg-3 col-sm-6">
                     <img src="./assets/image/NFT/Onboarding/1.png" alt="" class="img-fluid">
                   </div>
@@ -499,7 +518,7 @@
               <p>Menu</p>
               <span>This is the <span>Menu</span> screen with the screen/screens that can be accessed from it.</span>
               <div class="container nft-ui">
-                <div class="row">
+                <div class="row g-4">
                   <div class="col-md-4 col-lg-3 col-sm-6">
                     <img src="./assets/image/NFT/Home/5.png" alt="" class="img-fluid">
                   </div>
@@ -519,7 +538,7 @@
               <p>Schedule</p>
               <span>This is the <span>Schedule</span> screen with the screen/screens that can be accessed from it.</span>
               <div class="container nft-ui">
-                <div class="row">
+                <div class="row g-4">
                   <div class="col-12 col-md-4 col-lg-3 col-sm-6">
                     <img src="./assets/image/NFT/Home/9.png" alt="" class="img-fluid">
                   </div>
@@ -537,7 +556,7 @@
               <p>Community</p>
               <span>This is the <span>Community</span>screen with the screen/screens that can be accessed from it.</span>
               <div class="container nft-ui">
-                <div class="row">
+                <div class="row g-4">
                   <div class="col-12 col-md-4 col-lg-3 col-sm-6">
                     <img src="./assets/image/NFT/Home/10.png" alt="" class="img-fluid">
                   </div>
@@ -826,7 +845,7 @@
         <div>
           <h1>Contact Us</h1>
           <div class="hr-tag"></div>
-          <p>Please do not hesitate to contact us if you have any queries regarding NFTO or its features and functionalities.</p>
+          <p>Please do not hesitate to contact us if you have any queries regarding APP_NAME or its features and functionalities.</p>
           <div class="contact-card">
             <div class="contact-card-one">
               <div class="contact-card-content">
