--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     <!-- Start Introduction Section -->
     <section id="introduction">
       <div class="main-content">
-        <div>
-          <h1 class="main-content-intro">Introduction</h1>
+        <div  class="main-content-intro"
+          <h1>Introduction</h1>
           <div class="hr-tag"></div>
           <p>
             APP_NAME is a mobile app UI kit for gyms, fitness communities, and fitness platforms or services. This UI kit is perfect for gym owners and fitness business owners. APP_NAME has a wide range of pre-fixed features and options that can be easily modified with access to a large number of variations. It's a visually stunning and feature-filled UI kit that comes ready with tons of functionalities, removing the need for developing a fitness platform or app separately or from scratch. As a result, APP_NAME is a great tool for fitness entrepreneurs and business owners who want to manage an interconnected app platform for trainers, nutritionists, and regular users.
