--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Start Introduction Section -->
     <section id="introduction">
       <div class="main-content">
-        <div  class="main-content-intro"
+        <div  class="main-content-intro">
           <h1>Introduction</h1>
           <div class="hr-tag"></div>
           <p>
@@ -769,6 +769,9 @@
                   <img src="./assets/image/NFT/trainer/27.png" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 col-sm-6">
+                  <img src="./assets/image/NFT/trainer/40.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-12 col-md-4 col-lg-3 col-sm-6">
                   <img src="./assets/image/NFT/trainer/37.png" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 col-sm-6">
@@ -786,6 +789,9 @@
               <div class="row g-4">
                 <div class="col-12 col-md-4 col-lg-3 col-sm-6">
                   <img src="./assets/image/NFT/trainer/30.png" alt="" class="img-fluid">
+                </div>
+                <div class="col-12 col-md-4 col-lg-3 col-sm-6">
+                  <img src="./assets/image/NFT/trainer/41.png" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 col-sm-6">
                   <img src="./assets/image/NFT/trainer/37.png" alt="" class="img-fluid">
