--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
               <li><a href="#trainer-ui" data-bs-dismiss="offcanvas" data-bs-dismiss="offcanvas">Trainer UI</a></li>
             </ul>
           </li>
-
           </li>
           <li>
             <a href="#important-notes" class="menu-item" data-bs-dismiss="offcanvas">Important Note
@@ -78,7 +77,6 @@
             <a href="#contact-us" class="menu-item" data-bs-dismiss="offcanvas">Contact Us
             </a>
           </li>
-
         </ul>
       </nav>
     </div>
@@ -92,7 +90,7 @@
           <h1>Introduction</h1>
           <div class="hr-tag"></div>
           <p>
-            APP_NAME is a mobile app UI kit for gyms, fitness communities, and fitness platforms or services. This UI kit is perfect for gym owners and fitness business owners. APP_NAME has a wide range of pre-fixed features and options that can be easily modified with access to a large number of variations. It's a visually stunning and feature-filled UI kit that comes ready with tons of functionalities, removing the need for developing a fitness platform or app separately or from scratch. As a result, APP_NAME is a great tool for fitness entrepreneurs and business owners who want to manage an interconnected app platform for trainers, nutritionists, and regular users.
+            <b>Fitnofy</b> is a Fitness Flutter UI Kit for gyms, fitness communities, and fitness platforms or services. This UI kit is perfect for gym owners and fitness business owners. Fitnofy has a wide range of pre-fixed features and options that can be easily modified with access to a large number of variations. It's a visually stunning and feature-filled UI kit that comes ready with tons of functionalities, removing the need for developing a fitness platform or app separately or from scratch. As a result, Fitnofy is a great tool for fitness entrepreneurs and business owners who want to manage an interconnected app platform for trainers, nutritionists, and regular users.
           </p>
         </div>
       </div>
@@ -260,7 +258,7 @@
             </li>
             <li>
               <p>Change App Icon :</p>
-              <p>Go to the <span>"launcher"</span> folder under the <span>"assets"</span> folder, which can be found in the <span>"APP_NAME"</span> folder. Then replace the png files with your own icon, background, and foreground.
+              <p>Go to the <span>"launcher"</span> folder under the <span>"assets"</span> folder, which can be found in the <span>"Fitnofy"</span> folder. Then replace the png files with your own icon, background, and foreground.
                 Go to this folder</p>
               <img src="./assets/image/change_app_icon.png" alt="" class="img-fluid">
               <p>And Run below code to change the icon.</p>
@@ -273,13 +271,13 @@
             </li>
             <li>
               <p> Change App Name :</p>
-              <p>Go to the <strong> /APP_NAME/pubspec.yaml </strong> file then change the app name.</p>
+              <p>Go to the <strong> /Fitnofy/pubspec.yaml </strong> file then change the app name.</p>
               <img src="./assets/image/app-name.png" alt="" class="img-fluid">
               <p>And Run below code to change the app name.</p>
               <div class="code-snippet">
                 <img src="./assets/image/icon/copy.png" alt="" class="copy-icon" onclick="copyText(1)">
                 <span>flutter pub get</span>
-                <span>flutter pub run flutter_app_name</span>
+                <span>flutter pub run flutter_Fitnofy</span>
                 <div class="toast" id="toast1">Copied!</div>
               </div>
             </li>
@@ -298,7 +296,7 @@
         <div>
           <h1>Directory & files</h1>
           <div class="hr-tag"></div>
-          <p>This is a screenshot of the entire directory of APP_NAME that contains all the necessary folders and files.</p>
+          <p>This is a screenshot of the entire directory of Fitnofy that contains all the necessary folders and files.</p>
           <img src="./assets/image/full-folder.png" alt="" style="margin-left: 20px;" class="img-fluid">
           <p>You can find the <span> src </span>folder and <span>main.dart</span> file under the <span>lib</span> folder.</p>
           <img src="./assets/image/lib-folder.png" alt="" style="margin-left: 20px;" class="img-fluid">
@@ -857,7 +855,7 @@
         <div>
           <h1>Important Note</h1>
           <div class="hr-tag"></div>
-          <p>Thank you for choosing APP_NAME. We hope this documentation has provided you with comprehensive insights into the features and functionalities of APP_NAME. </p>
+          <p>Thank you for choosing Fitnofy. We hope this documentation has provided you with comprehensive insights into the features and functionalities of Fitnofy. </p>
           <p>
             Please note that in addition to the screens covered in this documentation, there are more screens available for you to explore and customize according to your unique preferences and requirements.
           </p>
@@ -873,7 +871,7 @@
         <div>
           <h1>Contact Us</h1>
           <div class="hr-tag"></div>
-          <p>Please do not hesitate to contact us if you have any queries regarding APP_NAME or its features and functionalities.</p>
+          <p>Please do not hesitate to contact us if you have any queries regarding Fitnofy or its features and functionalities.</p>
           <div class="contact-card">
             <div class="contact-card-one">
               <div class="contact-card-content">
@@ -985,7 +983,7 @@
       $('.element').CopyToClipboard();
     });
   </script>
-    <link href="assets/plugins/copy/js/jquery.copy-to-clipboard.js" rel="stylesheet">
+  <link href="assets/plugins/copy/js/jquery.copy-to-clipboard.js" rel="stylesheet">
   <script src="assets/js/script.js"></script>
 </body>
 
