--- a/index.html
+++ b/index.html
@@ -269,13 +269,13 @@
             </li>
             <li>
               <p> Change App Name :</p>
-              <p>Go to the <strong> /Fitnofy/pubspec.yaml </strong> file then change the app name.</p>
+              <p>Go to the <strong> /fitnofy/pubspec.yaml </strong> file then change the app name.</p>
               <img src="./assets/image/app-name.png" alt="" class="img-fluid">
               <p>And Run below code to change the app name.</p>
               <div class="code-snippet">
                 <img src="./assets/image/icon/copy.png" alt="" class="copy-icon" onclick="copyText(1)">
                 <span>flutter pub get</span>
-                <span>flutter pub run flutter_Fitnofy</span>
+                <span>flutter pub run flutter_app_name</span>
                 <div class="toast" id="toast1">Copied!</div>
               </div>
             </li>
@@ -324,6 +324,7 @@
             The <span>data</span> folder contains source data from both local and API and the dummy dataset on the app. Files in the models folder are used for releasing a set of information.
           </p>
           <img src="./assets/image/data-folder.png" alt="" style="margin-left: 20px;" class="img-fluid">
+          <img src="./assets/image/model.png" alt="" style="margin-left: 20px; margin-top: 10px;" class="img-fluid">
           <p>The modules folder can be divided into:</p>
           <ul>
             <li>Controller <span style="font-weight: 400;">(logical part of the app)</span></li>
