--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             </li>
             <li>
               <p>Change App Icon :</p>
-              <p>Go to the <span>"launcher"</span> folder under the <span>"assets"</span> folder, which can be found in the <span>"Fitnofy"</span> folder. Then replace the png files with your own icon, background, and foreground.
+              <p>Go to the <span>"launcher"</span> folder under the <span>"assets"</span> folder, which can be found in the <span>"fitnofy"</span> folder. Then replace the png files with your own icon, background, and foreground.
                 Go to this folder</p>
               <img src="./assets/image/change_app_icon.png" alt="" class="img-fluid">
               <p>And Run below code to change the icon.</p>
@@ -294,7 +294,7 @@
         <div>
           <h1>Directory & files</h1>
           <div class="hr-tag"></div>
-          <p>This is a screenshot of the entire directory of Fitnofy that contains all the necessary folders and files.</p>
+          <p>This is a screenshot of the entire directory of fitnofy that contains all the necessary folders and files.</p>
           <img src="./assets/image/full-folder.png" alt="" style="margin-left: 20px;" class="img-fluid">
           <p>You can find the <span> src </span>folder and <span>main.dart</span> file under the <span>lib</span> folder.</p>
           <img src="./assets/image/lib-folder.png" alt="" style="margin-left: 20px;" class="img-fluid">
