--- a/index.html
+++ b/index.html
@@ -306,7 +306,6 @@
             <li>models</li>
             <li>modules</li>
             <li>route</li>
-            <li>service</li>
             <li>theme</li>
           </ul>
           <img src="./assets/image/src-folder-two.png" alt="" style="margin-left: 20px; margin-top: 10px;" class="img-fluid">
@@ -316,6 +315,7 @@
             <li>constants <span style="font-weight: 400;">(for constant variables)</span>
             </li>
             <li>reusableComponents <span style="font-weight: 400;">(can be used in different parts of the app for different UI instances)</span></li>
+            <li> enums <span></span></li>
             <li> utils <span></span></li>
           </ul>
           </p>
@@ -598,13 +598,13 @@
                       <img src="./assets/image/NFT/profile/3.png" alt="" class="img-fluid">
                     </div>
                     <div class="col-12 col-md-4 col-lg-3 col-sm-6">
-                      <img src="./assets/image/NFT/profile/4.png" alt="" class="img-fluid">
+                      <img src="./assets/image/NFT/Profile/4.png" alt="" class="img-fluid">
                     </div>
                     <div class="col-12 col-md-4 col-lg-3 col-sm-6">
-                      <img src="./assets/image/NFT/profile/5.png" alt="" class="img-fluid">
+                      <img src="./assets/image/NFT/Profile/5.png" alt="" class="img-fluid">
                     </div>
                     <div class="col-12 col-md-4 col-lg-3 col-sm-6">
-                      <img src="./assets/image/NFT/profile/6.png" alt="" class="img-fluid">
+                      <img src="./assets/image/NFT/Profile/6.png" alt="" class="img-fluid">
                     </div>
                   </div>
                 </div>
@@ -740,7 +740,7 @@
                   <img src="./assets/image/NFT/trainer/1.png" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 col-sm-6">
-                  <img src="./assets/image/NFT/Admin/Admin/21.png" alt="" class="img-fluid">
+                  <img src="./assets/image/NFT/trainer/21.png" alt="" class="img-fluid">
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 col-sm-6">
                   <img src="./assets/image/NFT/Admin/Admin/20.png" alt="" class="img-fluid">
@@ -977,11 +977,7 @@
 
 
   </script>
-  <script>
-    $(document).ready(function () {
-      $('.element').CopyToClipboard();
-    });
-  </script>
+
   <link href="assets/plugins/copy/js/jquery.copy-to-clipboard.js" rel="stylesheet">
   <script src="assets/js/script.js"></script>
 </body>
