--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <link href="assets/plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
   <link href="assets/plugins/copy/css/demo.css" rel="stylesheet">
-  <title>VitalityX Template</title>
+  <title>fitnofy Template</title>
 </head>
 
 <body>
@@ -263,7 +263,7 @@
               <div class="code-snippet">
                 <img src="./assets/image/icon/copy.png" alt="" class="copy-icon" onclick="copyText(0)">
                 <span>flutter pub get</span>
-                <span>flutter pub run <span>flutter_launcher_icons:main</span> </span>
+                <span>flutter pub run <span>flutter_launcher_icons</span> </span>
                 <div class="toast" id="toast0">Copied!</div>
               </div>
             </li>
@@ -420,6 +420,11 @@
           <p>1 - Open /android/app/build.gradle and change the package name. Change <span style="color: red;">MinSdkVersion to 23</span> and <span style="color: red;"> compileSdkVersion to 33.</span></p>
           <img src="./assets/image/package.png" alt="" class="img-fluid">
           <p>2- Open <strong>/android/app/src/main/AndroidManifest.xml</strong>,<br> <strong>/android/app/src/profil/AndroidManifest.xml</strong>, <strong>/android/app/src/debug/AndroidManifest.xml </strong> and specify your:</p>
+             <div class="code-snippet">
+            <img src="./assets/image/icon/copy.png" alt="" class="copy-icon" onclick="copyText(5)">
+            <span>pod install</span>
+            <div class="toast" id="toast5">Copied!</div>
+          </div>
           <h3>Your Package Name</h3>
           <img src="./assets/image/manifest.png" alt="" class="img-fluid">
           <p>3 - Open <strong>/android/app/src/main/kotlin/</strong>
@@ -606,7 +611,7 @@
                     <div class="col-12 col-md-4 col-lg-3 col-sm-6">
                       <img src="./assets/image/NFT/Profile/6.png" alt="" class="img-fluid">
                     </div>
-                    
+
                   </div>
                 </div>
             </li>
