--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               <div class="code-snippet">
                 <img src="./assets/image/icon/copy.png" alt="" class="copy-icon" onclick="copyText(0)">
                 <span>flutter pub get</span>
-                <span>flutter pub run <span>flutter_launcher_icons</span> </span>
+                <span>flutter pub run <span>flutter_launcher_icons:main</span> </span>
                 <div class="toast" id="toast0">Copied!</div>
               </div>
             </li>
@@ -421,8 +421,9 @@
           <img src="./assets/image/package.png" alt="" class="img-fluid">
           <p>2- Open <strong>/android/app/src/main/AndroidManifest.xml</strong>,<br> <strong>/android/app/src/profil/AndroidManifest.xml</strong>, <strong>/android/app/src/debug/AndroidManifest.xml </strong> and specify your:</p>
              <div class="code-snippet">
-            <img src="./assets/image/icon/copy.png" alt="" class="copy-icon" onclick="copyText(5)">
-            <span>pod install</span>
+            <img src="./assets/image/icon/copy.png" alt="" class="copy-icon" onclick="copyText(7)">
+            <span>&lt;uses-permission android:name="android.permission.INTERNET"/&gt;</span>
+            <span>&lt;uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" /&gt;</span>
             <div class="toast" id="toast5">Copied!</div>
           </div>
           <h3>Your Package Name</h3>
