--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <link href="assets/plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
   <link href="assets/plugins/copy/css/demo.css" rel="stylesheet">
-  <title>fitnofy Template</title>
+  <title>Fitnofy Template</title>
 </head>
 
 <body>
